[gd_scene load_steps=6 format=3 uid="uid://kvd3humfuu3u"]

[ext_resource type="Script" uid="uid://buwav8c2iy52p" path="res://scripts/enemy_3.gd" id="2_cqmbq"]
[ext_resource type="Texture2D" uid="uid://wcmmtba2ka7a" path="res://sprites/Pixel SHMUP Free/large_enemy.png" id="2_w54lo"]
[ext_resource type="PackedScene" uid="uid://b7l4eh3yeigys" path="res://scenes/mini_bot.tscn" id="3_cqmbq"]

[sub_resource type="SpriteFrames" id="SpriteFrames_cqmbq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_w54lo")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_lp7oq"]
radius = 113.04

[node name="Splitting Bot" type="Area2D" groups=["damageable"]]
collision_layer = 2
collision_mask = 5
script = ExtResource("2_cqmbq")
mini_bot_scene = ExtResource("3_cqmbq")
speed = 60.0
shoot_interval = 1.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-1.90735e-06, 0)
scale = Vector2(3, 2.897)
sprite_frames = SubResource("SpriteFrames_cqmbq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, -5)
shape = SubResource("CircleShape2D_lp7oq")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(0, -132)
scale = Vector2(0.9, 0.5)

[node name="MuzzleEnemy" type="Marker2D" parent="."]
position = Vector2(0, 71)
scale = Vector2(0.9, 0.5)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
